--- a/config/.env.example
+++ b/config/.env.example
@@ -5,3 +5,5 @@ MYSQL_DB="wildfires"
 MYSQL_PORT=3306
 MYSQL_FIRMS_TABLE="test_firms_5"
 SA_PATH="config/service_accounts/..."
+URUGUAY_DATA_BUCKET="uruguay_data"
+FIREFIGHTERS_FILE="destacamentosbomberos.geojson"
