added ndvi/last route

--- a/config/.env.example
+++ b/config/.env.example
@@ -4,6 +4,7 @@ MYSQL_HOST="127.0.0.1"
 MYSQL_DB="wildfires"
 MYSQL_PORT=3306
 MYSQL_FIRMS_TABLE="test_firms_5"
+MYSQL_METRICS_TABLE="metrics"
 URUGUAY_DATA_BUCKET="uruguay_data"
 FIREFIGHTERS_FILE="destacamentosbomberos.geojson"
 SA_PATH="config/service_accounts/..."
