--- a/config/.env.example
+++ b/config/.env.example
@@ -8,3 +8,5 @@ MYSQL_METRICS_TABLE="metrics"
 URUGUAY_DATA_BUCKET="uruguay_data"
 FIREFIGHTERS_FILE="destacamentosbomberos.geojson"
 SA_PATH="config/service_accounts/..."
+SIGNED_URL_CACHE_TTL_SECONDS=300
+FIREFIGHTERS_CACHE_TTL_SECONDS=3600
